# langfuse-client

./: .gitignore  Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AnnotationQueuesApi.md  BaseScore.md  BooleanScore.md  CategoricalScore.md  ChatPrompt.md  CreateChatPromptRequest.md  CreatePromptRequestOneOf.md  CreateScoreRequest.md  DailyMetrics.md  DailyMetricsDetails.md  DatasetRunItemsApi.md  GetScoresResponseDataBoolean.md  GetScoresResponseDataCategorical.md  GetScoresResponseDataNumeric.md  GetScoresResponseDataOneOf.md  GetScoresResponseDataOneOf1.md  GetScoresResponseDataOneOf2.md  MediaContentType.md  MembershipsApi.md  MetricsApi.md  Model.md  NumericScore.md  ObservationType.md  ObservationsApi.md  Project.md  ProjectsCreateRequest.md  PromptOneOf.md  ScoreApi.md  ScoreBody.md  ScoreOneOf.md  ScoreOneOf1.md  ScoreOneOf2.md  TraceApi.md  TraceWithFullDetails.md  UsageByModel.md
src/apis/: annotation_queues_api.rs  dataset_run_items_api.rs  memberships_api.rs  metrics_api.rs  mod.rs  observations_api.rs  score_api.rs  trace_api.rs
src/models/: annotation_queue.rs  annotation_queue_item.rs  api_key_deletion_response.rs  api_key_list.rs  api_key_response.rs  api_key_summary.rs  authentication_scheme.rs  base_event.rs  base_prompt.rs  base_score.rs  boolean_score.rs  bulk_config.rs  categorical_score.rs  chat_message.rs  chat_prompt.rs  comment.rs  config_category.rs  create_annotation_queue_item_request.rs  create_chat_prompt_request.rs  create_comment_request.rs  create_comment_response.rs  create_dataset_item_request.rs  create_dataset_request.rs  (+139 more)
